# django-sourcery

./: .gitignore  pyproject.toml
src/django_sourcery/: apps.py  helpers.py  models.py  settings.py
src/django_sourcery/migrations/: 0001_initial.py  0002_alter_eventrecord_id.py  0002_eventrecord_type.py  0003_alter_eventrecord_id.py  0003_remove_eventrecord_record_unique_originator_version_and_more.py
testproject/: db.sqlite3
testproject/core/: models.py
testproject/core/migrations/: 0001_initial.py  0002_order_version.py  0003_alter_order_total.py  0004_alter_order_version.py
testproject/testproject/: settings.py
testproject/tests/: test_decorator.py  test_orders.py  test_restore.py
